--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,12 +70,12 @@
     rel="stylesheet"
   />
   <!-- Favicon -->
-  <link
+  <!--<link
     rel="icon"
     href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico"
     type="image/gif"
     sizes="16x16"
-  />
+  />-->
   <script>
       var base_url = '{{ site.url}}{{site.baseurl}}' ;
    </script>
