--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -56,7 +56,7 @@ layout: default
       {% endif %} {% if site.author_website_url %}
       <h6><i class="fas fa-link"></i> {{ site.author_website_url }}</h6>
       {% endif %} {% if site.author_cv %}
-      <h6><i class="ai ai-cv"></i><a href={{ site.author_cv }}>Curriculum Vitae</a></h6>
+      <h6><i class="ai ai-cv"></i><a href="{{ site.author_cv }}">Curriculum Vitae</a></h6>
       {% endif %}
     </div>
 
