Fixed CSS for homepage

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -118,7 +118,7 @@ body {
     background-color: var(--main-background-color) !important;
     color: var(--main-text-color) !important;
     font-family: 'Quicksand', sans-serif !important;
-    font-feature-settings: "kern"on;
+    font-feature-settings: "kern";
     font-size: 1.4rem;
     font-variant-numeric: oldstyle-nums;
     hanging-punctuation: first last;
