--- a/_includes/gallery-layout.html
+++ b/_includes/gallery-layout.html
@@ -11,7 +11,7 @@
       {% endfor %}
       </div>
   </div>
-<script type="text/javascript">
+<script>
     $(document).ready(function() {
         $("#imageGallery").lightGallery({
           thumbnail: false,
