--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -39,7 +39,7 @@ layout: default
         {% endif %} {% if site.author_website_url %}
         <h6><i class="fas fa-link"></i> {{ site.author_website_url }}</h6>
         {% endif %} {% if site.author_cv %}
-        <h6><i class="ai ai-cv"></i><a href="{{ site.author_cv }}">Curriculum Vitae</a></h6>
+        <h6><object data="{{site.url}}{{site.baseurl}}/assets/img/cv.svg" width="25" height="18"></object><a href="{{ site.author_cv }}">Curriculum Vitae</a></h6>
         {% endif %}
       </div>
 
@@ -48,14 +48,6 @@ layout: default
 
         {%- include author_skills.html -%}
       </div>
-
-      {% if site.wakatime_username %}
-      <div class="card">
-        <h1>Coding Activity</h1>
-
-        {%- include coding_activity.html -%}
-      </div>
-      {% endif %}
     </div>
     <div class="col-lg-8">
       {% if site.author_bio %}
