Re-added favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,7 @@
   <meta content="{{ tag }}" property="article:tag" />
   {% endfor %} {% endif %}
 
+  <link rel="icon" type="image/x-icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico">
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/main.css" />
   <!-- <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/custom-style.css" /> -->
   <link
