--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -4,7 +4,7 @@
 $body-typeface:'Quicksand', sans-serif;
 $nav-typeface: "Gill sans";
 $mono-typeface: Menlo, Monaco, monospace;
-$text-width: 650px;
+/*$text-width: 650px;*/
 
 html[data-theme="dark"] {
     --bold-color: rgb(188, 188, 188);
@@ -101,15 +101,6 @@ html[data-theme="light"] {
     scroll-behavior: smooth;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
-table, th, td {
-    border: 1px solid;
-}
-
 ol,
 ul {
     margin-left: 30px !important;
@@ -135,10 +126,6 @@ body {
     padding-top: 33px;
     overflow-x: hidden;
     overflow-y: scroll;
-}
-
-.reactions-view {
-    color: var(--bold-color) !important;
 }
 
 .col-lg-12 {
