Fixed top bar and preparedd svg icons for menu

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -274,8 +274,8 @@ header {
 }
 
 #topNav {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
     background-color: var(--main-background-color) !important;
     box-shadow: #000 0px 0px 8px;
 }
