Added rounded borders to blockquote elements

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -209,6 +209,7 @@ blockquote {
     background: var(--main-background-color) !important;
     border: 1px solid;
     color: var(--bold-color);
+    border-radius: 5px;
 }
 
 /* Scrollbar */
