--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -56,7 +56,6 @@ html[data-theme="light"] {
         --light-text-color: rgb(199, 199, 204);
         --link-color: #f69801;
         --nav-color: #131313;
-        --search-color: #FF7901;
         --nav-link-color: rgba(255, 255, 255, .5);
         --link-color-visited: hsl(250, 100%, 60%);
         --main-background-color: rgb(28, 28, 30);
@@ -79,7 +78,6 @@ html[data-theme="light"] {
         --link-color: #ca6521;
         --nav-color: #ffffff;
         --nav-link-color: #111111;
-        --search-color: #ababab;
         --link-color-visited: hsl(250, 100%, 37%);
         --main-background-color: rgb(255, 255, 255);
         --main-text-color: rgb(51, 51, 51);
@@ -289,8 +287,7 @@ header {
     box-shadow: #000 0px 0px 8px;
 }
 
-#navbar-hamburger,
-#navbar-search {
+#navbar-hamburger {
     color: var(--bold-color) !important;
 }
 
@@ -332,152 +329,6 @@ header {
 
 .card-title {
     margin-bottom: .75rem !important;
-}
-
-/* Search Overlay */
-.icon {
-    font-size: 35px;
-}
-
-.search-form-container {
-    position: fixed;
-    top: 60px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    background-color: rgba(0, 0, 0, 0.9);
-    /* Black with a little bit see-through */
-    z-index: 101;
-    white-space: nowrap;
-    visibility: hidden;
-    transition: all 0.4s ease-in-out;
-    transform: translate(0px, -100%) scale(0, 0);
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-
-    -webkit-transform: translate(0px, -100%) scale(0, 0);
-    -moz-transform: translate(0px, -100%) scale(0, 0);
-    -o-transform: translate(0px, -100%) scale(0, 0);
-    -ms-transform: translate(0px, -100%) scale(0, 0);
-    transform: translate(0px, -100%) scale(0, 0);
-
-    opacity: 0;
-
-
-    &__close {
-        position: absolute;
-        top: 5%;
-        right: 10% !important;
-        width: 5%;
-        cursor: pointer;
-        text-align: center;
-        color: orange;
-
-        .icon {
-            vertical-align: text-top;
-            transition: 0.4s;
-            fill: #fff;
-
-            &:hover {
-                fill: orange;
-                transform: rotate(90deg);
-            }
-        }
-
-        @media (max-width: 40em) {
-            top: 2%;
-            right: 5%;
-        }
-    }
-
-    &.is-active {
-        opacity: 1;
-        visibility: visible;
-        transform: translate(0px, 0px) scale(1, 1);
-    }
-}
-
-.search-form {
-    margin-bottom: 20px;
-
-    &__field {
-
-        position: absolute;
-        top: 10%;
-        width: 100%;
-        color: #f69801;
-        background: rgba(0, 0, 0, 0);
-        font-size: 30px;
-        font-weight: 300;
-        text-align: center;
-        border: 0px;
-        border-bottom: 1px dashed #ffa000;
-        margin: 0px auto;
-        margin-top: -51px;
-        padding-left: 30px;
-        padding-right: 30px;
-        outline: none;
-
-        &:focus {
-            border: 0;
-            border-bottom: 1px dashed #ffa000;
-        }
-    }
-
-    &__submit {
-        display: none;
-    }
-
-    &__fieldset {
-        border: 0;
-        margin-top: 10%;
-        padding: 0;
-    }
-}
-
-.search-result-container {
-    display: none;
-}
-
-.search-results {
-    display: none;
-    height: 80vh;
-    overflow: auto;
-    white-space: normal;
-    text-align: center;
-    color: lightgrey;
-
-    .heading {
-        margin-bottom: 16px !important;
-        margin-right: 16px !important;
-        font-size: 17px;
-        color: lightgrey !important;
-    }
-
-    &__item {
-        padding-bottom: 16px;
-        border-bottom: 1px solid #3b4446;
-        margin-top: 50px;
-
-        &__title {
-            display: block;
-            text-decoration: none;
-            font-size: 25px;
-            line-height: 25px;
-            color: orange !important;
-            text-decoration: none;
-        }
-
-        &__date {
-            color: orange;
-            font-size: 15px;
-            line-height: 15px;
-        }
-    }
 }
 
 .breadcrumb {
