--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -57,17 +57,17 @@ layout: default
         <p>{{ site.author_bio }}</p>
       </div>
       {% endif %} {% if site.show_author_project_details == true %}
-      <div id="author_projects" class="card">
+      <div class="card author_projects">
         <h1 class="card-title">Projects</h1>
         <br />
         {% for project in site.author_project_details %} {% if project.visibility
         == true %}
-        <div class="row project-card">
-          <div class="col-md-3">
-            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img"
+        <div class="project-card">
+          <div class="card-img-container">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="card-img"
               alt="" />
           </div>
-          <div class="col-md-9">
+          <div class="card-details">
             <h4 class="experience-title">{{ project.project_title }}</h4>
             {% if project.project_info %}<h6 class="experience-info">{{ project.project_info }}</h6>{% endif %}
             <p class="experience-desc">{{ project.project_description }}</p>
@@ -80,16 +80,16 @@ layout: default
         {% endif %} {% endfor %}
       </div>
       {% endif %} {% if site.show_author_work_experiences == true %}
-      <div class="card">
+      <div class="card author_projects">
         <h1 class="card-title">Work Experience</h1>
         <br />
         {% for exp in site.author_work_experiences %} {% if exp.visibility == true
         %}
-        <div class="row">
-          <div class="col-md-3">
-            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="company-logo" alt="" />
+        <div class="project-card">
+          <div class="card-img-container">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="card-img" alt="" />
           </div>
-          <div class="col-md-9">
+          <div class="card-details">
             <h4 class="experience-title">{{ exp.designation }}</h4>
             <h6 class="experience-info">{{ exp.company_name}}</h6>
             <p class="experience-desc">{{ exp.description }}</p>
@@ -99,16 +99,16 @@ layout: default
         {% endif %} {% endfor %}
       </div>
       {% endif %} {% if site.show_author_education_details == true %}
-      <div class="card">
+      <div class="card author_projects">
         <h1 class="card-title">Education</h1>
         <br />
         {% for detail in site.author_education_details %} {% if detail.visibility
         == true %}
-        <div class="row">
-          <div class="col-md-3">
-            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="company-logo" alt="" />
+        <div class="project-card">
+          <div class="card-img-container">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="card-img" alt="" />
           </div>
-          <div class="col-md-9">
+          <div class="card-details">
             <h4 class="experience-title">{{detail.college_degree }}</h4>
             <h6 class="experience-info">{{detail.college_name}}</h6>
             <p class="experience-desc">{{detail.description}}</p>
