--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,8 +60,8 @@
     crossorigin="anonymous"></script>
   <script async defer
     src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
-  <script async defer
-    src="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script async defer
+    src="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
   <script async defer
     src="{{site.url}}{{site.baseurl}}/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
   <script async defer
