--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="col-lg-12">
+<div>
   <div class="row justify-content-center">
     <div class="col-lg-6">
       <ul>
