--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -1,10 +1,11 @@
 /* devlopr-jekyll styling */
 
 /* variables */
-$body-typeface: 'Quicksand', sans-serif;
-$nav-typeface: "Gill sans";
-$mono-typeface: Menlo, Monaco, monospace;
+/*$body-typeface: 'Quicksand', sans-serif;*/ // unused
+/*$nav-typeface: "Gill sans";*/ // unused
+/*$mono-typeface: Menlo, Monaco, monospace;*/ // unused
 /*$text-width: 650px;*/
+$nav-bar-height: 50px;
 
 html[data-theme="dark"] {
     --bold-color: rgb(188, 188, 188);
@@ -267,12 +268,18 @@ header {
 
 
 /* bootstrap override */
+// .container-fluid {
+//     padding: 0px !important;
+//     width: fit-content !important;
+//     margin-left: 0px !important;
+//     margin-right: 0px !important;
+//     margin-top: 10px !important;
+// }
 .container-fluid {
-    padding: 0px !important;
-    width: fit-content !important;
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-    margin-top: 10px !important;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
 }
 
 .card {
@@ -286,6 +293,7 @@ header {
     padding-right: 5%;
     background-color: var(--main-background-color) !important;
     box-shadow: #000 0px 0px 8px;
+    height: $nav-bar-height;
 }
 
 #navbar-hamburger {
@@ -480,6 +488,22 @@ header {
     background: transparent;
 }
 
+.author-info {
+    max-width: 30%;
+    display: inline-block;
+
+    top: 0;
+    margin-top: 0;
+    // top: 50%;
+    // -ms-transform: translateY(-50%);
+    // transform: translateY(-50%);
+}
+
+.author-experiences {
+    max-width: 70%;
+    display: inline-block;
+}
+
 #profile-card {
     text-align: center;
 
@@ -593,7 +617,6 @@ footer {
 */
 
 @media (min-width: 320px) and (max-width: 480px) {
-
     header {
         height: auto;
         text-align: center;
