--- a/ledmington.github.io/src/assets/css/colors.scss
+++ b/ledmington.github.io/src/assets/css/colors.scss
@@ -1,2 +1,3 @@
-$background_dark: #1C1C1E;
-$text_color: #ff7601;
+$background_dark: rgb(28, 28, 30);
+$background_dark_lighter: rgb(93, 93, 100);
+$text_color: rgb(255, 118, 1);
