--- a/ledmington.github.io/src/assets/css/colors.scss
+++ b/ledmington.github.io/src/assets/css/colors.scss
@@ -1,3 +1,4 @@
 $background_dark: rgb(28, 28, 30);
 $background_dark_lighter: rgb(93, 93, 100);
 $text_color: rgb(255, 118, 1);
+$white_text_color: rgb(188, 188, 188);
